# SHARKadm

./: .gitignore  .pre-commit-config.yaml  README.md  main_simple_flet_gui.py  pyproject.toml  requirements.txt
.github/workflows/: format_lint_and_test.yml
CONFIG_FILES/: column_views.txt
CONFIG_FILES/ids/: phytoplankton_id.yaml
CONFIG_FILES/import_matrix/: import_matrix_epibenthos.txt  import_matrix_jellyfish.txt  import_matrix_physicalchemical.txt  import_matrix_phytoplankton.txt  import_matrix_zoobenthos.txt  import_matrix_zooplankton.txt
SHARKadm/: __init__.py  archive_controller.py  config_paths.py  controller.py  event.py  settings.py  sharkadm_data_model.plantuml  sharkadm_exceptions.py  sharkadm_logger.py  workflow.py
SHARKadm/config/: __init__.py  column_info.py  data_type_mapper.py  delivery_note_mapper.py  import_config.py  import_matrix.py  physical_chemical_mapper.py  sharkadm_id.py  utils.py
SHARKadm/data/: __init__.py  change_log.py  data_holder.py  delivery_note.py
SHARKadm/exporters/: __init__.py  base.py  html_station_map.py  print_on_screen.py  shark_data_txt_file.py  shark_metadata_auto.py  standard_format.py  txt_file.py  zip_archive.py
SHARKadm/sharkadm_logger/: __init__.py  exporter.py  sharkadm_logger.py
SHARKadm/transformers/: __init__.py  add_sample_id_prefix.py  add_sampler_area.py  add_sharkadm_id_columns.py  aphia.py  area.py  arithmetic.py  bacteria.py  base.py  boolean.py  bvol.py  columns.py  copy_variable.py  cruise.py  custom_id.py  dataset_name.py  date_and_time.py  date_time.py  delivery_note_info.py  depth.py  dyntaxa.py  laboratory.py  lims.py  lims_less_than.py  location.py  map_header.py  map_parameter_column.py  orderer.py  position.py  pressure.py  project_code.py  red_list.py  remove_decimal.py  replace_comma_with_dot.py  reporting_institute.py  row.py  sampling_info.py  scientific_name.py  shark_id.py  sharkadm_id_columns.py  (+7 more)
SHARKadm/utils/: __init__.py  convert_config_files.py  identical_files.py  inspect_kwargs.py  matching_strings.py  position.py  wide_to_long.py
SHARKadm/validators/: __init__.py  aphia_id.py  base.py  columns.py  mandatory.py  position.py  unique.py  year.py
programs/: config.yaml  saves.yaml  zip_archive_publishing.py
src/: prepare_data_for_qc_tool.py  zip_archive_publishing.py  zip_archive_publishing_saves.yaml
src/sharkadm/: __init__.py  archive_controller.py  config_paths.py  controller.py  controller_class_diagram.plantuml  dataframe_data.py  dv_template_data.py  event.py  explore_sharkadm.py  ifcb.py  lims_data.py  operation.py  operator.py  settings.py  sharkadm_cli.py  sharkadm_exceptions.py  workflow.py  workflow_class_diagram.plantuml
tests/: test_data_holder.py  test_data_source_txt.py  test_transformers.py
tests/config/: test_data_type.py
tests/data/: __init__.py  conftest.py  test_data.py
tests/transformers/: conftest.py  test_add_columns_with_prefix.py  test_add_ctd_kust.py  test_add_density.py  test_add_lmqnt.py  test_add_oxygen_saturation.py  test_add_pressure.py  test_add_uncertainty.py  test_analyse_info.py  test_columns.py  test_date_and_time.py  test_format_serial_number.py  test_replace.py  test_replace_comma_with_dot.py  utilities.py
tests/validators/: conftest.py  test_airpres.py  test_airtemp.py  test_base.py  test_cloud.py  test_common_values.py  test_date_and_time.py  (+11 more)
(+389 files in other folders)
