[project]
name = "sharkadm"
version = "3.0.0"
description = "Handles workflows for Swedish NODC"
authors = [
    {name = "Magnus Wenzer", email = "magnus.wenzer@smhi.se"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "pyproj>=3.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.1",
    "requests>=2.31.0",
    "xlsxwriter>=3.2.0",
    "polars>=1.26.0",
    "fastexcel>=0.13.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.setuptools.packages.find]
where = ["src", "tests"]

[tool.setuptools.package-data]
mypkg = ["."]

[dependency-groups]
dev = ["pytest>=8.2.2", "notebook>=7.3.2", "ruff>=0.11.2"]

[tool.ruff]
line-length = 90
indent-width = 4
target-version = "py311"
