[project]
name = "sharkadm"
version = "3.1.0"
description = "Handles workflows for Swedish NODC"
authors = [
    {name = "Magnus Wenzer", email = "magnus.wenzer@smhi.se"},
]
dependencies = [
    "pyyaml>=6.0.1",
    "pyproj>=3.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.1",
    "requests>=2.31.0",
    "xlsxwriter>=3.2.0",
    "polars>=1.26.0",
    "fastexcel>=0.13.0",
    "rich>=14.0.0",
    "typer>=0.15.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[project.scripts]
sharkadm-cli = "sharkadm.sharkadm_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.2.2",
     "notebook>=7.3.2",
     "ruff>=0.11.4",
     "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 90
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "F",  # pyflakes
    "E", # pycodestyle: error
    "W",  # pycodestyle: warning
    "I001",  # isort: unsorted-imports
    "RUF"  # Ruff-specific rules
]
